# LLM-course

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/llm_course/: RL.ipynb  llm.ipynb  main.py  musk_language_modeling.ipynb  token_classification.ipynb  unit1.ipynb  unit2.ipynb  unit3.ipynb  unit3pytorch.ipynb
src/llm_course/wandb/: latest-run
src/llm_course/wandb/run-20250712_132824-5ywsexy6/files/: wandb-metadata.json
src/llm_course/wandb/run-20250712_133908-1j0ovbcw/: run-1j0ovbcw.wandb
src/llm_course/wandb/run-20250712_133908-1j0ovbcw/files/: config.yaml  wandb-metadata.json  wandb-summary.json
src/llm_course/wandb/run-20250712_135050-mz5ljg0z/: run-mz5ljg0z.wandb
src/llm_course/wandb/run-20250712_135050-mz5ljg0z/files/: config.yaml  wandb-metadata.json  wandb-summary.json
src/llm_course/wandb/run-20250712_135515-tzxryrhj/: run-tzxryrhj.wandb
src/llm_course/wandb/run-20250712_135515-tzxryrhj/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
src/llm_course/wandb/run-20250712_140222-o3lqo1ih/: run-o3lqo1ih.wandb
src/llm_course/wandb/run-20250712_140222-o3lqo1ih/files/: config.yaml  wandb-metadata.json
src/llm_course/wandb/run-20250712_140252-ziffbaji/: run-ziffbaji.wandb
src/llm_course/wandb/run-20250712_140252-ziffbaji/files/: config.yaml  wandb-metadata.json
src/llm_course/wandb/run-20250712_140315-xf7030bq/: run-xf7030bq.wandb
src/llm_course/wandb/run-20250712_140315-xf7030bq/files/: config.yaml  wandb-metadata.json
tests/: test_main.py
(+1 files in other folders)
